fixed x-overflow in mobile view

--- a/src/components/company_section/CompanySection.css
+++ b/src/components/company_section/CompanySection.css
@@ -19,7 +19,7 @@
   justify-content: space-between;
   width: 100%;
 }
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .company-section {
     flex-wrap: wrap;
     gap: 1rem;
