--- a/src/components/container/Container.css
+++ b/src/components/container/Container.css
@@ -2,10 +2,9 @@
   margin: 0 50px;
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .container {
     margin: 0;
     padding: 0;
-    max-width: 100vw;
   }
 }
