--- a/src/components/description_section/DescriptionSection.css
+++ b/src/components/description_section/DescriptionSection.css
@@ -51,7 +51,7 @@
   text-align: center;
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .description-section {
     flex-direction: column;
     max-width: 100%;
