--- a/src/components/heading/Heading.css
+++ b/src/components/heading/Heading.css
@@ -28,7 +28,7 @@
   width: 50%;
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .heading {
     flex-direction: column;
     width: 100%;
